--- a/www/style/style.css
+++ b/www/style/style.css
@@ -1,12 +1,25 @@
 .fetch-movies-btn {
-  position: fixed;
-  z-index: 50;
-  top: 10%;
-  left: 50%;
+  position: relative;
+  top: 50%;
+  left: 45%;
+  margin-top: -100px;
+  margin-left: -200px;
+
+  background: #428BCA;
+  color: #fff;
+  font-family: Sans-serif;
+  font-size: 20px;
+  height: 60px;
+  width: 150px;
+  line-height: 60px;
+  margin: 25px 25px;
+  text-align: center;
+  border: 0;
+  transition: all 0.3s ease 0s;
 }
 
-.fetch-movies-btn input {
-  width: 100%;
+.fetch-movies-btn:hover {
+  opacity: 0.75;
 }
 
 .video-item img {
